[gd_scene load_steps=12 format=2]

[ext_resource path="res://Spaceship.tscn" type="PackedScene" id=1]
[ext_resource path="res://Collect.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Asteroid.tscn" type="PackedScene" id=4]
[ext_resource path="res://DeathFlash.wav" type="AudioStream" id=5]
[ext_resource path="res://Picked Coin Echo.wav" type="AudioStream" id=6]
[ext_resource path="res://retro_sound_1_0.wav" type="AudioStream" id=7]
[ext_resource path="res://laserpew.ogg" type="AudioStream" id=8]
[ext_resource path="res://lightning.png" type="Texture" id=9]
[ext_resource path="res://bulletbig.png" type="Texture" id=10]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 8, 0, 0, 0, 0, 1024, 0, 0, 0, 0, 0, 1024, 600, 0, 0, 0, 0, 0, 600, 0, 0, 0, 0, 0, 8 )
}

[node name="Main" type="Node"]
script = ExtResource( 3 )
Asteroid = ExtResource( 4 )
Coin = ExtResource( 2 )

[node name="Spaceship" parent="." instance=ExtResource( 1 )]
position = Vector2( 527, 270 )

[node name="AsteroidPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="AsteroidSpawnLocation" type="PathFollow2D" parent="AsteroidPath"]
position = Vector2( 0, 8 )
rotation = -0.00781252

[node name="CoinPath" type="Path2D" parent="AsteroidPath"]
rotation = -0.000682551
curve = SubResource( 1 )

[node name="CoinSpawnLocation" type="PathFollow2D" parent="AsteroidPath/CoinPath"]
position = Vector2( 0, 8 )
rotation = -0.00781252

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="UI" type="CanvasLayer" parent="."]
layer = 5

[node name="Score" type="Label" parent="UI"]
margin_left = 8.0
margin_top = 16.0
margin_right = 55.0
margin_bottom = 30.0
rect_scale = Vector2( 5, 5 )
text = "Score: 0"

[node name="Powerups" type="Control" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0

[node name="Speed" type="Control" parent="UI/Powerups"]
margin_left = -250.0
margin_right = -210.0
margin_bottom = 40.0

[node name="Lightning" type="Sprite" parent="UI/Powerups/Speed"]
position = Vector2( -6, 40 )
scale = Vector2( 5, 5 )
texture = ExtResource( 9 )

[node name="Multiplier" type="Label" parent="UI/Powerups/Speed"]
margin_left = 40.0
margin_top = 10.0
margin_right = 80.0
margin_bottom = 24.0
rect_scale = Vector2( 5, 5 )
text = "x2"

[node name="Bullet" type="Control" parent="UI/Powerups"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Bullet" type="Sprite" parent="UI/Powerups/Bullet"]
position = Vector2( -32, 40 )
scale = Vector2( 5, 5 )
texture = ExtResource( 10 )

[node name="MainMenu" type="Control" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="UI/MainMenu"]
margin_left = -308.0
margin_top = -160.0
margin_right = -247.0
margin_bottom = -146.0
rect_scale = Vector2( 10, 10 )
text = "Asteroids"
align = 1

[node name="Button" type="Button" parent="UI/MainMenu"]
margin_left = -188.0
margin_top = 16.0
margin_right = -150.0
margin_bottom = 36.0
rect_scale = Vector2( 10, 10 )
text = "Play"

[node name="AsteroidPit" type="Node" parent="."]

[node name="Effecttimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="CoinTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="CoinPit" type="Node" parent="."]

[node name="Sounds" type="Node" parent="."]

[node name="Spaceship_die" type="AudioStreamPlayer2D" parent="Sounds"]
rotation = -0.00485496
stream = ExtResource( 7 )

[node name="Coin" type="AudioStreamPlayer2D" parent="Sounds"]
rotation = -0.00242748
stream = ExtResource( 6 )

[node name="Asteroid_smallexplode" type="AudioStreamPlayer2D" parent="Sounds"]
rotation = -0.000366928
stream = ExtResource( 5 )

[node name="Asteroid_bigexplode" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 5 )

[node name="Pew" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 8 )

[node name="Bulletpit" type="Node" parent="."]

[connection signal="when_play" from="." to="Spaceship" method="_on_Main_when_play"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="pressed" from="UI/MainMenu/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Effecttimer" to="." method="_on_Effecttimer_timeout"]
[connection signal="timeout" from="CoinTimer" to="." method="_on_CoinTimer_timeout"]
